--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <p>而Unicooe是为加密而生</p>
 <h1 id="下载">下载 </h1>
 <p>当然,你可以下载这款字体:</p>
-<p><a href="file:///c:\Users\17063\Desktop\xxxz\ttf\fonts\unicooe.ttf">unicooe</a></p>
+<p><a href="https://ttf.sbrb.xyz/fonts/unicooe.ttf">unicooe</a></p>
 <h1 id="用法">用法 </h1>
 <p>英文单词，中文语法。<br>
 注意事项:当两个外形相似的字母结合时应使用'-'(‘‘遗符’’)连接。<br>
